# ot_cpp

./: .clang-format  Makefile  conanfile.txt  meson.build
crylib/: crypto.cpp  rand.cpp  rand.h
crylib/include/: crypto.h  rand.h
crylib/src/: crypto.cpp  rand.cpp
include/: protocol_5_1.hpp  rand.hpp
test/: main.cpp
test/src/: main.cpp
